# nlmixr2-python

./: .gitignore  CLAUDE.md  PROMPT.md  TODO.md  pyproject.toml
docs/: DECISIONS.md  HARNESS.md  PARITY.md  PLAN.md  STATE.md  api_reference.md
docs/decisions/: 001-initial-scope.md
docs/examples/: bootstrap_example.md  foce_example.md  focei_example.md  saem_example.md
docs/guides/: convergence_troubleshooting.md  diagnostics.md  migration_from_r.md
docs/harness/: cluster.md
docs/parity/: coverage-matrix.md  nlmixr2-package.md  reference-fit-artifact.md
docs/plan/: phase-0-bootstrap.md
docs/session-log/: 2026-03.md
scripts/: reference_dataset_debug.R  reference_fit_helpers.R  reference_pk_oral1comp_fit.R  reference_smoke.R  reference_theophylline_fit.R  reference_warfarin_foce_fit.R  reference_warfarin_saem_fit.R
tests/: test_addl_expansion.py  test_api.py  test_api_foce.py  test_api_saem.py  test_bootstrap.py  test_bounds.py  test_censoring.py  test_compare.py  test_control.py  test_convergence_stress.py  test_covar_search.py  test_covariance_in_fit.py  test_covariates.py  test_data.py  test_data_nonmem.py  test_datasets.py  test_diagnostics.py  test_estimators.py  test_event_table.py  test_fit_enrichment.py  test_fixed_params.py  test_focei.py  test_hessian.py  test_install.py  test_integration.py  test_iov.py  test_jit_utils.py  test_laplacian.py  test_likelihoods.py  test_lincmt.py  test_lincmt_3cmt.py  test_mixture.py  test_nlm.py  test_nlme.py  test_ode.py  test_ode_advanced.py  test_omega.py  test_optimizer.py  test_parallel.py  test_parser.py  (+15 more)
(+83 files in other folders)
