[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlmixr2-python"
version = "0.1.0"
description = "Python-first replication harness for nlmixr2 semantics."
readme = "docs/HARNESS.md"
requires-python = ">=3.10"
dependencies = [
  "jax",
  "jaxlib",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
